--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
+<style>
+	  a{
+    border: solid gray 3px;
+    padding: 5px;
+    }
+</style>
     <title>Document</title>
 </head>
 <body>
-	<a href="form.html">入力フォームへ</a>
+	<a href="form.html">画面遷移</a>
 </body>
 </html
