--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     padding: 5px;
     }
 </style>
-    <title>Document</title>
+    <title>document</title>
 </head>
 <body>
 	<a href="form.html" style="border: solid orange 3px;">入力フォームへ</a>
